--- a/views/header.html
+++ b/views/header.html
@@ -1,10 +1,10 @@
 <div class="grid-100" id="header" >
-    <img id="logo" src="images/logo.png" />
+    <img id="logo" src="images/logo.png?5" />
 </div>
 
 <style>
     #header{
-        background-color: #223C47;
+        background-color: #003946;
         color: #fff;
         min-height: 60px;
     }
