--- a/views/main.html
+++ b/views/main.html
@@ -1,24 +1,24 @@
-<div id="grafico"></div>
+<div id="grafico-configuracoes" >
 
-<input type="text" ng-model="Grafico.nome" placeholder="Nome do Gráfico" ng-change="Visual.iniciarGrafico()" />
+        <div class="btn-group gcm-radioButton" ng-click="Visual.iniciarGrafico()" >
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'area'">  <i class="fa fa-area-chart" ></i> &Aacute;rea</label>
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'barra'"> <i class="fa fa-bar-chart" ></i> Barra</label>
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'coluna'"><i class="fa fa-bar-chart" ></i> Coluna</label>
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'degrau'"><i class="fa fa-area-chart" ></i> Degrau</label>
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'linha'"> <i class="fa fa-line-chart" ></i> Linha</label>
+                <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'pizza'"> <i class="fa fa-pie-chart"></i> Pizza</label>
+        </div>
+
+        <button  class="btn btn-primary" ng-click="Grafico.reiniciar()" ><i class="fa fa-file-o"></i> Novo</button>
+        <button  class="btn btn-primary" ng-click="Visual.Imagem.download()" ><i class="fa fa-download"></i> Salvar</button>
+        <button  class="btn btn-primary" ng-click="Visual.abrirGrafico()" ><i class="fa fa-list-alt"></i> Exibir</button>
 
 
-<div class="btn-group gcm-radioButton" ng-click="Visual.iniciarGrafico()" >
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'area'">  <i class="fa fa-area-chart" ></i> &Aacute;rea</label>
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'barra'"> <i class="fa fa-bar-chart" ></i> Barra</label>
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'coluna'"><i class="fa fa-bar-chart" ></i> Coluna</label>
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'degrau'"><i class="fa fa-area-chart" ></i> Degrau</label>
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'linha'"> <i class="fa fa-line-chart" ></i> Linha</label>
-        <label class="btn btn-primary" ng-model="Grafico.tipo" btn-radio="'pizza'"> <i class="fa fa-pie-chart"></i> Pizza</label>
+        <input type="range" min="300" ng-model="Grafico.largura" ng-change="Visual.iniciarGrafico()" style="width: initial;" max="900"/>Largura: {{Grafico.largura}}px
+        <input type="range" min="200" ng-model="Grafico.altura" ng-change="Visual.iniciarGrafico()"  style="width: initial;" max="900"/>Altura: {{Grafico.altura}}px
 </div>
 
-<button  class="btn btn-primary" ng-click="Visual.abrirGrafico()" >Abrir Grafico</button>
-<button  class="btn btn-primary" ng-click="Visual.Imagem.download()" >Salvar Grafico</button>
 
-
-
-<input type="range" min="300" ng-model="Grafico.largura" ng-change="Visual.iniciarGrafico()" style="width: initial;" max="900"/>Largura: {{Grafico.largura}}px
-<input type="range" min="200" ng-model="Grafico.altura" ng-change="Visual.iniciarGrafico()"  style="width: initial;" max="900"/>Altura: {{Grafico.altura}}px
 
 
 <table>
@@ -33,15 +33,15 @@
                 </tr>
                 <tr>
                         <td ng-repeat="campo in Grafico.Tabela.colunas track by $index" >
-                                <input ng-if="$index!==0" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" ng-hide="Grafico.tipo==='pizza' && $index>1" />
-                                <input ng-if="$index===0" type="text" readonly ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" />
+                                <input ng-if="$index!==0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" ng-hide="Grafico.tipo==='pizza' && $index>1" />
+                                <input ng-if="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" placeholder="Nome do Gráfico" />
                         </td>
                 </tr>
         </thead>
         <tbody>
                 <tr ng-repeat="linha in Grafico.Tabela.linhas track by $index" >
                         <td ng-repeat="campo in linha track by $index" ng-hide="Grafico.tipo==='pizza' && $index>1"  >
-                                <input ng-show="$index===0" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
+                                <input ng-show="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
                                 <input ng-hide="$index===0" type="number" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
                         </td>
                         <td  >
@@ -57,4 +57,8 @@
 </table>
 
 
+
+
+
+<div id="grafico"></div>
 <div id="imagem" style="display: none;" ></div>
