--- a/views/main.html
+++ b/views/main.html
@@ -20,42 +20,42 @@
 
 
 
-
-<table>
-        <thead>
-                <tr>
-                        <td ng-hide="Grafico.tipo==='pizza' && $index>1" ng-repeat="campo in Grafico.Tabela.colunas track by $index" style="text-align: center;" >
-                                <button ng-if="$index!==0" class="btn btn-danger" ng-click="Visual.Coluna.remover($index)" ><i class="fa fa-times"></i></button>
-                        </td>
-                        <td ng-hide="Grafico.tipo==='pizza'" >
-                                <button  class="btn btn-success" ng-click="Visual.Coluna.adicionar()" ><i class="fa fa-plus"></i></button>
-                        </td>
-                </tr>
-                <tr>
-                        <td ng-repeat="campo in Grafico.Tabela.colunas track by $index" >
-                                <input ng-if="$index!==0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" ng-hide="Grafico.tipo==='pizza' && $index>1" />
-                                <input ng-if="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" placeholder="Nome do Gráfico" />
-                        </td>
-                </tr>
-        </thead>
-        <tbody>
-                <tr ng-repeat="linha in Grafico.Tabela.linhas track by $index" >
-                        <td ng-repeat="campo in linha track by $index" ng-hide="Grafico.tipo==='pizza' && $index>1"  >
-                                <input ng-show="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
-                                <input ng-hide="$index===0" type="number" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
-                        </td>
-                        <td  >
-                                <button class="btn btn-danger" ng-click="Visual.Linha.remover($index)" ><i class="fa fa-times"></i></button>
-                        </td>
-                </tr>
-                <tr>
-                        <td  >
-                                <button  class="btn btn-success" ng-click="Visual.Linha.adicionar()" ><i class="fa fa-plus"></i></button>
-                        </td>
-                </tr>
-        </tbody>
-</table>
-
+<div id="tabela-container" >
+        <table>
+                <thead>
+                        <tr>
+                                <td ng-hide="Grafico.tipo==='pizza' && $index>1" ng-repeat="campo in Grafico.Tabela.colunas track by $index" style="text-align: center;" >
+                                        <button ng-if="$index!==0" class="btn btn-danger" ng-click="Visual.Coluna.remover($index)" ><i class="fa fa-times"></i></button>
+                                </td>
+                                <td ng-hide="Grafico.tipo==='pizza'" >
+                                        <button  class="btn btn-success" ng-click="Visual.Coluna.adicionar()" ><i class="fa fa-plus"></i></button>
+                                </td>
+                        </tr>
+                        <tr>
+                                <td ng-repeat="campo in Grafico.Tabela.colunas track by $index" >
+                                        <input ng-if="$index!==0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" ng-hide="Grafico.tipo==='pizza' && $index>1" />
+                                        <input ng-if="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.colunas[$index]" placeholder="Nome do Gráfico" />
+                                </td>
+                        </tr>
+                </thead>
+                <tbody>
+                        <tr ng-repeat="linha in Grafico.Tabela.linhas track by $index" >
+                                <td ng-repeat="campo in linha track by $index" ng-hide="Grafico.tipo==='pizza' && $index>1"  >
+                                        <input ng-show="$index===0" class="btn-primary" type="text" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
+                                        <input ng-hide="$index===0" type="number" ng-change="Visual.iniciarGrafico()" ng-model="Grafico.Tabela.linhas[$parent.$index][$index]" />
+                                </td>
+                                <td  >
+                                        <button class="btn btn-danger" ng-click="Visual.Linha.remover($index)" ><i class="fa fa-times"></i></button>
+                                </td>
+                        </tr>
+                        <tr>
+                                <td  >
+                                        <button  class="btn btn-success" ng-click="Visual.Linha.adicionar()" ><i class="fa fa-plus"></i></button>
+                                </td>
+                        </tr>
+                </tbody>
+        </table>
+</div>
 
 
 
