--- a/views/header.html
+++ b/views/header.html
@@ -7,6 +7,9 @@
         background-color: #003946;
         color: #fff;
         min-height: 60px;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 
     #logo{
